# ATM_Simulator

./: .gitattributes  .gitignore  ATM_Simulator_TZ.md  CMakeLists.txt  README.md
config/: default_config.json
docs/: atm_architecture.html  rendering-scheme.html  scene_architecture.md  scene_frame_budget.md  study-guide.html
include/atmsim/: Version.hpp
include/atmsim/config/: Config.hpp  ConfigLoader.hpp
include/atmsim/console/: AdminConsole.hpp  CommandParser.hpp  FrameDiffer.hpp  LiveRenderer.hpp  Signals.hpp  SplashScreen.hpp  Terminal.hpp
include/atmsim/console/scene/: ActorAnim.hpp  GlyphSet.hpp  SceneCanvas.hpp  SceneComposer.hpp  ScenePresenter.hpp  SceneSprites.hpp
include/atmsim/core/: Account.hpp  Cashbox.hpp  Client.hpp  Money.hpp  Operation.hpp  Types.hpp
include/atmsim/engine/: AtmEngine.hpp  ClientFactory.hpp  ScopedEngineThreads.hpp  ServiceStages.hpp  ServiceTimeProvider.hpp  SimulationRunner.hpp  Snapshots.hpp
include/atmsim/reporting/: Logger.hpp
include/atmsim/utils/: ru_console.hpp
scripts/: asan_docker.sh  build_docker.sh  tsan_docker.sh  valgrind_docker.sh
src/: main.cpp
src/config/: ConfigLoader.cpp
src/console/: AdminConsole.cpp  CommandParser.cpp  FrameDiffer.cpp  LiveRenderer.cpp  Signals.cpp  SplashScreen.cpp  Terminal.cpp
src/console/scene/: ActorAnim.cpp  GlyphSet.cpp  SceneCanvas.cpp  SceneComposer.cpp  ScenePresenter.cpp  SceneSprites.cpp
src/core/: Account.cpp  Cashbox.cpp  Money.cpp  Operation.cpp  Types.cpp
src/engine/: AtmEngine.cpp  ClientFactory.cpp  ServiceStages.cpp  ServiceTimeProvider.cpp  SimulationRunner.cpp
src/reporting/: Logger.cpp
tests/: simple_test.hpp  test_account.cpp  test_cashbox.cpp  test_config.cpp  test_engine.cpp  test_frame_differ.cpp  test_logger.cpp  test_main.cpp  test_money.cpp  test_operation.cpp  test_parser.cpp  test_renderer.cpp  test_scene_canvas.cpp  test_scene_compose.cpp  test_scene_presenter.cpp  test_service_stages.cpp  test_service_time.cpp  test_simulation.cpp  test_splash.cpp
tools/: term_bench.cpp
